Correct FF alignment issue (Join Us)
Centers left-aligned section.

--- a/static/styles/joinus.css
+++ b/static/styles/joinus.css
@@ -1,8 +1,8 @@
 .joinus-section .ribbon {
     background: white;
 //    margin-bottom: 1em;
-	margin: 0 auto 1em; // FF fix
-	width: 40%; // FF fix
+    margin: 0 auto 1em; // FF fix
+    width: 40%; // FF fix
 }
 
 .joinus-section .content-head {
@@ -12,4 +12,5 @@
 .joinus-section .ribbon .pure-u-1 {
     margin-left: auto;
     margin-right: auto;
+    width: 100%;
 }
